[package]
name = "fsp"
version = "0.3.2"
edition = "2021"


authors = ["Toutouh Hamza hamza.toutouh@outlook.com"]

license-file = "LICENSE"

readme = "README.md"

description = "File System Plus  is a package that provide create, update and delete operation on file syteme"

documentation = "https://github.com/O-Boxe/stdlib/tree/fsp---file-system-%2B"
homepage = "https://github.com/O-Boxe/stdlib/tree/fsp---file-system-%2B"
repository = "https://github.com/O-Boxe/stdlib/tree/fsp---file-system-%2B"

keywords = ["filesystem", "easy_to_use"]
categories = ["filesystem"]
[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }